<resources>
    <string name="app_name">Chess</string>
    <string name="addButton">New tournament</string>
    <string name="tournamnetName">Tournament name:</string>
    <string name="numberOfRobins">Number of round robins:</string>
    <string name="startListOrder">Startlist\'s order:</string>
    <string name="tieBreak">Tie break:</string>
    <string name="tournamentType">Type of tournament:</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="finish_adding">Start tournament</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="rating">Rating:</string>
    <string name="not_all_filled">All fields should be filled!</string>
    <string name="too_less_players">There should be at least 2 players in the tournament!</string>
    <string-array name="roundRobinsArray">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="orderArray">
        <item>Random</item>
        <item>Alphabetical</item>
        <item>By rating</item>
    </string-array>
    <string-array name="tieBreakArray">
        <item>Berger</item>
        <item>Direct game</item>
    </string-array>
    <string-array name="tournamentTypeArray">
        <item>Classic</item>
        <item>Rapid</item>
        <item>Blitz</item>
    </string-array>
    <string-array name="ScoresArray">
        <item>"1–0"</item>
        <item>"0–1"</item>
        <item>"1/2-1/2"</item>
    </string-array>

    <string name="start_list">Start List</string>
    <string name="pairings">Pairings</string>
    <string name="results">Results</string>
    <string name="prev">Prev.</string>
    <string name="round">Round %d</string>
    <string name="saveScores">Save scores</string>
    <string name="pos">Pos.</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="berger">Berger</string>
    <string name="AlerTitle">New ranking list available!</string>
    <string name="AlertDIalogMessage">Click yes to download (~9MB of transfer)</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>


</resources>
