<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/positionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/pos"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/nameSurnameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/player"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/points"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/bergerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/berger"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="normal" />
</LinearLayout>