<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulonio.chess.activities.ResultsActivity">

    <ListView
        android:id="@+id/resultsListView"
        android:layout_width="370dp"
        android:layout_height="516dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="19dp" />

    <Button
        android:id="@+id/startListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:onClick="onStartListClick"
        android:text="@string/start_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onPairingsClick"
        android:text="@string/pairings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultsButton"
        app:layout_constraintStart_toEndOf="@+id/startListButton" />
</android.support.constraint.ConstraintLayout>
